--- a/src/Pokedex.css
+++ b/src/Pokedex.css
@@ -18,5 +18,5 @@
   }
 
   body {
-    background-image: url(https://wallpapers.com/images/hd/pokemon-stadium-1920-x-1080-wallpaper-dqqp686gjn57ka0u.jpg);
+    background-image: url(https://wallpapercave.com/wp/wp10311654.png);
   }
